--- a/index.css
+++ b/index.css
@@ -1,60 +1,188 @@
-.wrapper {
+#grid-wrapper {
     display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows: 10% 10% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+    height: 5000px;
+    width: 100%;
+    background-color: beige;
 }
 
-.one {
-    grid-column: 1 / 5;
-    grid-row: 1;
-    background-color: rgba(93, 188, 210, 0.4);
-    border: 10px thick black;
+#lander-wrapper {
+    grid-column: 1/11;
+    grid-row: 1/3;
+    height: 100%;
+    width: 100%;
+    background-image: url(https://images2.alphacoders.com/633/633149.jpg);
 }
 
-.one-1 {
-    grid-column: 5 / 8;
-    grid-row: 1;
-    background-color: rgba(93, 188, 210, 0.6);
-    border: 10px thick black;
+#img-cromulon {
+    height: 250px;
+    transform: scaleX(-1);
+    float: right;
 }
 
-.one-2 {
+#projects {
+    grid-column: 2/10;
+    grid-row: 3/6;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+}
+
+#personal-progress {
+    grid-column: 2/10;
+    grid-row: 6/11;
+    height: 100%;
+    width: 100%;
+    background-color: skyblue;
+}
+
+#idea-gen {
+    grid-column: 2/10;
+    grid-row: 11/14;
+    height: 100%;
+    width: 100%;
+    background-color: yellowgreen;
+}
+
+#footer {
+    height: 300px;
+    width: 100%;
+    background-color: rgb(70, 122, 149);
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    grid-column: 8 / 12;
-    grid-row: 1;
-    background-color: rgba(93, 188, 210, 0.8);
-    border: 10px thick black;
 }
 
-.nav-btn {
-    padding: 0 5% 0 5%;
-    background-color: transparent;
-    border: 0px;
-    border-radius: 5px;
+#footer-left-padding {
+    width: 10%;
 }
 
-.two {
-    grid-column: 2 / 11;
-    grid-row: 2 / 8;
-    background-color: rgba(93, 188, 210, 0.5);
+#img-jerry-portal {
+    position: absolute;
+    margin: 25px 0 25px 50px;
+    height: 250px;
 }
 
-.three {
-    grid-column: 2 / 11;
-    grid-row: 8 / 16;
-    background-color: rgba(93, 188, 210, 0.7);
+#img-portal-shot {
+    margin: 25px 25px;
+    height: 250px;
+    width: 40%;
 }
 
-.four {
-    grid-column: 2 / 11;
-    grid-row: 16 / 24;
-    background-color: rgba(93, 188, 210, 0.9);
+#social-media {
+    grid-column: 2/3;
+    grid-row: 5/6;
+    /* height: 100px; */
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.five {
-    grid-column: 1 / 12;
-    grid-row: 24 / 26;
-    background-color: rgba(93, 188, 210, 0.5);
+#contact-name {
+    grid-column: 2/5;
+    grid-row: 2/3;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.1em;
+    letter-spacing: 0.12em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#contact-info {
+    grid-column: 2/5;
+    grid-row: 3/8;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+#phone-number {
+    margin-top: 10px;
+    height: 25px;
+    width: 100%;
+    letter-spacing: 0.12em;
+    color: rgb(235, 235, 235);
+}
+
+#email-info {
+    margin-top: 20px;
+    height: 25px;
+    width: 100%;
+    letter-spacing: 0.12em;
+    color: rgb(211, 211, 211);
+}
+
+#address {
+    height: 90px;
+    letter-spacing: 0.12em;
+    color: rgb(235, 235, 235)
+}
+
+#address ul {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+#address li {
+    list-style-type: none;
+    padding: 2.5px 0px 2.5px 0px
+}
+
+#social-name {
+    grid-column: 6/9;
+    grid-row: 2/3;
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.1em;
+    letter-spacing: 0.12em;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#social-icons {
+    grid-column: 6/9;
+    grid-row: 3/5;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.social-media-icon {
+    height: 50px;
+    width: 50px;
+}
+
+#event-name {
+    grid-column: 6/9;
+    grid-row: 6/7;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.1em;
+    letter-spacing: 0.12em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#event-icons {
+    grid-column: 6/9;
+    grid-row: 7/8;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#icon-centralise {
+    width: 150px;
+    display: flex;
+    justify-content: space-around;
 }
