--- a/index.css
+++ b/index.css
@@ -1,169 +1,184 @@
-@media screen and (min-width: 1024px) {
-    #grid-wrapper {
-        display: grid;
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-        grid-template-rows: 10% 10% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
-        height: 5000px;
-        width: 100%;
-        background-color: beige;
+    @media screen and (min-width: 1024px) {
+        #grid-wrapper {
+            display: grid;
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+            grid-template-rows: 10% 10% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+            height: 5000px;
+            width: 100%;
+            background-color: beige;
+        }
+        #lander-wrapper {
+            grid-column: 1/11;
+            grid-row: 1/3;
+            height: 100%;
+            width: 100%;
+            background-image: url(https://images2.alphacoders.com/633/633149.jpg);
+            background-position: 50% 0px;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
+        }
+        #title-show-me-what-you-got {
+            grid-column: 2/8;
+            grid-row: 2/5;
+            width: 100%;
+        }
+        #img-rick-fall {
+            grid-column: 1/4;
+            grid-row: 4/8;
+        }
+        #img-cromulon {
+            grid-column: 7/8;
+            grid-row: 4/6;
+            height: 250px;
+            transform: scaleX(-1);
+            float: right;
+        }
+        #projects {
+            grid-column: 2/10;
+            grid-row: 3/6;
+            height: 100%;
+            width: 100%;
+            background-color: white;
+        }
+        #personal-progress {
+            grid-column: 2/10;
+            grid-row: 6/11;
+            height: 100%;
+            width: 100%;
+            background-color: skyblue;
+        }
+        #idea-gen {
+            grid-column: 2/10;
+            grid-row: 11/14;
+            height: 100%;
+            width: 100%;
+            background-color: yellowgreen;
+        }
+        #footer {
+            height: 300px;
+            width: 100%;
+            background-color: rgb(70, 122, 149);
+            display: flex;
+        }
+        #footer-left-padding {
+            width: 5%;
+        }
+        #img-jerry-portal {
+            position: absolute;
+            margin: 25px 0 25px 0;
+            height: 250px;
+        }
+        #img-portal-shot {
+            margin: 25px 25px;
+            height: 250px;
+            width: 37.5%;
+        }
+        #social-media {
+            grid-column: 2/3;
+            grid-row: 5/6;
+            /* height: 100px; */
+            width: 55%;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        }
+        #contact-name {
+            grid-column: 1/4;
+            grid-row: 2/3;
+            width: 250px;
+            height: 100%;
+            color: white;
+            font-family: 'Roboto Slab', serif;
+            font-size: 1.1em;
+            letter-spacing: 0.12em;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+        #contact-info {
+            grid-column: 1/4;
+            grid-row: 3/8;
+            width: 250px;
+            font-family: 'Roboto', sans-serif;
+            font-size: 0.9em;
+            text-align: center;
+        }
+        #phone-number {
+            margin-top: 10px;
+            height: 25px;
+            width: 100%;
+            letter-spacing: 0.12em;
+            color: rgb(235, 235, 235);
+        }
+        #email-info {
+            margin-top: 20px;
+            height: 25px;
+            width: 100%;
+            letter-spacing: 0.12em;
+            color: rgb(211, 211, 211);
+        }
+        #address {
+            width: 100%;
+            height: 90px;
+            letter-spacing: 0.12em;
+            color: rgb(235, 235, 235)
+        }
+        #address ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+        #address li {
+            list-style-type: none;
+            padding: 2.5px 0px 2.5px 0px
+        }
+        #social-name {
+            grid-column: 6/9;
+            grid-row: 2/3;
+            width: 100%;
+            height: 100%;
+            font-family: 'Roboto Slab', serif;
+            font-size: 1.1em;
+            letter-spacing: 0.12em;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+        #social-icons {
+            grid-column: 6/9;
+            grid-row: 3/5;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+        }
+        .social-media-icon {
+            height: 40px;
+            width: 40px;
+        }
+        #event-name {
+            grid-column: 6/9;
+            grid-row: 6/7;
+            width: 100%;
+            height: 100%;
+            color: white;
+            font-family: 'Roboto Slab', serif;
+            font-size: 1.1em;
+            letter-spacing: 0.12em;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+        #event-icons {
+            grid-column: 6/9;
+            grid-row: 7/8;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        #icon-centralise {
+            width: 150px;
+            display: flex;
+            justify-content: space-around;
+        }
     }
-    #lander-wrapper {
-        grid-column: 1/11;
-        grid-row: 1/3;
-        height: 100%;
-        width: 100%;
-        background-image: url(https://images2.alphacoders.com/633/633149.jpg);
-    }
-    #img-cromulon {
-        height: 250px;
-        transform: scaleX(-1);
-        float: right;
-    }
-    #projects {
-        grid-column: 2/10;
-        grid-row: 3/6;
-        height: 100%;
-        width: 100%;
-        background-color: white;
-    }
-    #personal-progress {
-        grid-column: 2/10;
-        grid-row: 6/11;
-        height: 100%;
-        width: 100%;
-        background-color: skyblue;
-    }
-    #idea-gen {
-        grid-column: 2/10;
-        grid-row: 11/14;
-        height: 100%;
-        width: 100%;
-        background-color: yellowgreen;
-    }
-    #footer {
-        height: 300px;
-        width: 100%;
-        background-color: rgb(70, 122, 149);
-        display: flex;
-    }
-    #footer-left-padding {
-        width: 5%;
-    }
-    #img-jerry-portal {
-        position: absolute;
-        margin: 25px 0 25px 0;
-        height: 250px;
-    }
-    #img-portal-shot {
-        margin: 25px 25px;
-        height: 250px;
-        width: 37.5%;
-    }
-    #social-media {
-        grid-column: 2/3;
-        grid-row: 5/6;
-        /* height: 100px; */
-        width: 55%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-    #contact-name {
-        grid-column: 1/4;
-        grid-row: 2/3;
-        width: 250px;
-        height: 100%;
-        color: white;
-        font-family: 'Roboto Slab', serif;
-        font-size: 1.1em;
-        letter-spacing: 0.12em;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
-    #contact-info {
-        grid-column: 1/4;
-        grid-row: 3/8;
-        width: 250px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 0.9em;
-        text-align: center;
-    }
-    #phone-number {
-        margin-top: 10px;
-        height: 25px;
-        width: 100%;
-        letter-spacing: 0.12em;
-        color: rgb(235, 235, 235);
-    }
-    #email-info {
-        margin-top: 20px;
-        height: 25px;
-        width: 100%;
-        letter-spacing: 0.12em;
-        color: rgb(211, 211, 211);
-    }
-    #address {
-        width: 100%;
-        height: 90px;
-        letter-spacing: 0.12em;
-        color: rgb(235, 235, 235)
-    }
-    #address ul {
-        list-style-type: none;
-        padding-left: 20px;
-    }
-    #address li {
-        list-style-type: none;
-        padding: 2.5px 0px 2.5px 0px
-    }
-    #social-name {
-        grid-column: 6/9;
-        grid-row: 2/3;
-        width: 100%;
-        height: 100%;
-        font-family: 'Roboto Slab', serif;
-        font-size: 1.1em;
-        letter-spacing: 0.12em;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
-    #social-icons {
-        grid-column: 6/9;
-        grid-row: 3/5;
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-    }
-    .social-media-icon {
-        height: 40px;
-        width: 40px;
-    }
-    #event-name {
-        grid-column: 6/9;
-        grid-row: 6/7;
-        width: 100%;
-        height: 100%;
-        color: white;
-        font-family: 'Roboto Slab', serif;
-        font-size: 1.1em;
-        letter-spacing: 0.12em;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
-    #event-icons {
-        grid-column: 6/9;
-        grid-row: 7/8;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    #icon-centralise {
-        width: 150px;
-        display: flex;
-        justify-content: space-around;
-    }
-}
