--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
     @media screen and (min-width: 1024px) {
+        body {
+            margin: 0;
+        }
         #grid-wrapper {
             display: grid;
             grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
             grid-template-rows: 10% 10% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
-            height: 5000px;
+            height: 6000px;
             width: 100%;
             background-color: beige;
         }
@@ -40,6 +43,151 @@
             height: 100%;
             width: 100%;
             background-color: white;
+            display: grid;
+            grid-template-columns: 5% 5% 10% 10% 10% 10% 10% 10% 10% 10% 5% 5%;
+            grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        }
+        #project-title {
+            grid-column: 2/4;
+            grid-row: 1/2;
+            font-family: 'Roboto Slab', serif;
+            font-size: 3em;
+            display: flex;
+            align-self: flex-end;
+        }
+        #solo-projects {
+            grid-column: 2/12;
+            grid-row: 2/10;
+            /* background-color: pink; */
+            display: grid;
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+            grid-template-rows: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+        }
+        #solo-player {
+            grid-column: 1/3;
+            grid-row: 2/5;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+        }
+        .bg-oval {
+            height: 400px;
+            width: 200px;
+            border-radius: 100px / 200px;
+            background-image: linear-gradient(360deg, transparent 50%, #525252 50%);
+            display: flex;
+            justify-content: center;
+        }
+        #img-morty-solo {
+            height: 350px;
+        }
+        #solo-title {
+            grid-column: 1/3;
+            grid-row: 5/6;
+            height: 60px;
+            width: 100%;
+            border-radius: 5px 25px 25px 5px;
+            background-color: black;
+            font-family: 'Roboto', sans-serif;
+            color: white;
+            font-size: 2em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #solo-description {
+            grid-column: 1/3;
+            grid-row: 6/11;
+            background-color: skyblue;
+        }
+        #project-box-1 {
+            grid-column: 4/11;
+            grid-row: 2/11;
+        }
+        .project-box {
+            background-color: goldenrod;
+            display: grid;
+            grid-template-columns: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+            grid-template-rows: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+        }
+        .project-show-1 {
+            grid-column: 1/11;
+            grid-row: 1/10;
+            background-color: white;
+            border: 5px solid black;
+        }
+        .project-show-1 {
+            grid-column: 1/11;
+            grid-row: 1/10;
+            background-color: burlywood;
+            border: 5px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .project-show-1 img {
+            max-height: 90%;
+            max-width: 90%;
+            -moz-transition: all 0.3s;
+            -webkit-transition: all 0.3s;
+            transition: all 0.3s;
+        }
+        .project-show-1:hover img {
+            -moz-transform: scale(1.1);
+            -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+        }
+        #google-calculator-clone {
+            height: 100%;
+            width: 100%;
+        }
+        .project-show-2 {
+            grid-column: 11/21;
+            grid-row: 1/10;
+            background-color: cyan;
+            border: 5px solid silver;
+        }
+        .project-show-3 {
+            grid-column: 1/11;
+            grid-row: 12/21;
+            background-color: red;
+        }
+        .project-show-4 {
+            grid-column: 11/21;
+            grid-row: 12/21;
+            background-color: skyblue;
+        }
+        #coop-player {
+            grid-column: 1/3;
+            grid-row: 12/15;
+            display: flex;
+            justify-content: center;
+        }
+        #img-rick-and-morty {
+            height: 225px;
+        }
+        #coop-title {
+            grid-column: 1/3;
+            grid-row: 15/16;
+            height: 60px;
+            width: 100%;
+            border-radius: 5px 25px 25px 5px;
+            background-color: black;
+            font-family: 'Roboto', sans-serif;
+            color: white;
+            font-size: 2em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #coop-description {
+            grid-column: 1/3;
+            grid-row: 16/21;
+            background-color: skyblue;
+        }
+        #project-box-2 {
+            grid-column: 4/11;
+            grid-row: 12/21;
         }
         #personal-progress {
             grid-column: 2/10;
@@ -180,5 +328,13 @@
             width: 150px;
             display: flex;
             justify-content: space-around;
+        }
+        @keyframes darken {
+            from {
+                opacity: 0
+            }
+            to {
+                opacity: 0.3
+            }
         }
     }
