--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@
             align-self: flex-end;
         }
         #solo-projects {
-            grid-column: 2/12;
+            grid-column: 1/13;
             grid-row: 2/10;
             /* background-color: pink; */
             display: grid;
@@ -89,6 +89,7 @@
             border-radius: 5px 25px 25px 5px;
             background-color: black;
             font-family: 'Roboto', sans-serif;
+            font-weight: bold;
             color: white;
             font-size: 2em;
             display: flex;
@@ -99,6 +100,112 @@
             grid-column: 1/3;
             grid-row: 6/11;
             background-color: skyblue;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        }
+        #stack {
+            grid-column: 1/9;
+            grid-row: 1/4;
+            height: 100%;
+            width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        }
+        #stack-type {
+            grid-column: 1/3;
+            grid-row: 1/2;
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.5em;
+            height: 100%;
+            width: 97%;
+            border: 5px solid black;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .language-badges {
+            grid-column: 1/3;
+            grid-row: 3/7;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .language-circle {
+            height: 50px;
+            width: 50px;
+            background-color: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .language-icon {
+            grid-row: 3/4;
+            height: 40px;
+            width: 40px;
+        }
+        #icon-css3 {
+            margin-top: 5px;
+            height: 45px;
+            width: 45px;
+        }
+        .empty-icon {
+            height: 45px;
+            width: 55px;
+        }
+        #tools {
+            grid-column: 1/9;
+            grid-row: 4/ 9;
+            height: 90%;
+            width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        }
+        #tool-title {
+            grid-column: 1/3;
+            grid-row: 1/2;
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.5em;
+            height: 100%;
+            width: 97%;
+            border: 5px solid black;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .tools-list {
+            grid-column: 1/3;
+            grid-row: 2/5;
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.3em;
+            display: grid;
+            grid-template-columns: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+            grid-template-rows: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+        }
+        #bullet-point-1 {
+            grid-column: 2/3;
+            grid-row: 5/6;
+        }
+        #tool-1 {
+            grid-column: 4/5;
+            grid-row: 5/6;
+        }
+        #bullet-point-2 {
+            grid-column: 11/12;
+            grid-row: 5/6;
+        }
+        #tool-2 {
+            grid-column: 13/15;
+            grid-row: 5/6;
+        }
+        .arrow-bullet-point {
+            height: 20px;
+            width: 20px;
         }
         #project-box-1 {
             grid-column: 4/11;
@@ -119,7 +226,7 @@
         .project-show-1 {
             grid-column: 1/11;
             grid-row: 1/10;
-            background-color: burlywood;
+            background-color: white;
             border: 5px solid black;
             display: flex;
             justify-content: center;
@@ -174,6 +281,7 @@
             border-radius: 5px 25px 25px 5px;
             background-color: black;
             font-family: 'Roboto', sans-serif;
+            font-weight: bold;
             color: white;
             font-size: 2em;
             display: flex;
@@ -184,6 +292,45 @@
             grid-column: 1/3;
             grid-row: 16/21;
             background-color: skyblue;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        }
+        #mongodb-icon {
+            height: 55px;
+            width: 55px;
+        }
+        #bullet-point-3 {
+            grid-column: 2/3;
+            grid-row: 12/13;
+        }
+        #tool-3 {
+            grid-column: 4/5;
+            grid-row: 12/13;
+        }
+        #bullet-point-4 {
+            grid-column: 11/12;
+            grid-row: 12/13;
+        }
+        #tool-4 {
+            grid-column: 13/15;
+            grid-row: 12/13;
+        }
+        #bullet-point-5 {
+            grid-column: 2/3;
+            grid-row: 19/20;
+        }
+        #tool-5 {
+            grid-column: 4/5;
+            grid-row: 19/20;
+        }
+        #bullet-point-6 {
+            grid-column: 11/12;
+            grid-row: 19/20;
+        }
+        #tool-6 {
+            grid-column: 13/15;
+            grid-row: 19/20;
         }
         #project-box-2 {
             grid-column: 4/11;
