--- a/index.css
+++ b/index.css
@@ -244,9 +244,13 @@
         #panel-slide-out-1 {
             grid-column: 1/11;
             grid-row: 10/21;
-            height: 100%;
+            height: 0%;
             width: 100%;
             background-image: url(http://i.imgur.com/IL9nJ3d.png);
+        }
+        #panel-content {
+            height: 100%;
+            width: 100%;
             display: grid;
             grid-template-columns: 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5%;
             grid-template-rows: 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5% 2.5%;
@@ -352,11 +356,12 @@
             grid-column: 1/20;
             grid-row: 1/20;
             position: relative;
-            height: 20px;
-            width: 20px;
+            height: 15px;
+            width: 15px;
             font-weight: 100;
             font-size: 30px;
             background-color: transparent;
+            animation: 1s blink infinite;
         }
         .blinking2 {
             grid-column: 1/20;
@@ -596,12 +601,20 @@
             display: flex;
             justify-content: space-around;
         }
-        @keyframes darken {
+        @keyframes fadein {
             from {
                 opacity: 0
             }
             to {
-                opacity: 0.3
+                opacity: 1
+            }
+        }
+        @keyframes fadeout {
+            from {
+                opacity: 1
+            }
+            to {
+                opacity: 0
             }
         }
         @keyframes slideinheight {
