--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@
         }
         #projects {
             grid-column: 2/10;
-            grid-row: 3/6;
+            grid-row: 3/7;
             height: 100%;
             width: 100%;
             background-color: white;
@@ -562,7 +562,7 @@
         }
         #progress {
             grid-column: 1/11;
-            grid-row: 6/11;
+            grid-row: 7/12;
             height: 100%;
             width: 100%;
             display: grid;
@@ -573,13 +573,12 @@
             grid-column: 2/10;
             height: 100%;
             width: 100%;
-            background-color: skyblue;
             display: grid;
             grid-template-columns: 5% 5% 10% 10% 10% 10% 10% 10% 10% 10% 5% 5%;
             grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
         }
         #graph-area {
-            grid-column: 1/11;
+            grid-column: 1/13;
             grid-row: 3/7;
             height: 100%;
             width: 100%;
@@ -610,13 +609,13 @@
         #graph-box-1 {
             grid-column: 1/2;
             grid-row: 4/5;
-            border-bottom: 128px solid rgb(141, 189, 216);
+            border-bottom: 128px solid skyblue;
             border-left: 112px solid transparent;
         }
         #graph-box-2 {
             grid-column: 2/3;
             grid-row: 4/5;
-            background-color: rgb(141, 189, 216);
+            background-color: skyblue;
             height: 128px;
             display: flex;
             align-self: flex-end;
@@ -725,7 +724,7 @@
             border-left: 5px solid white;
         }
         #progress-dates {
-            grid-column: 1/11;
+            grid-column: 1/13;
             grid-row: 7/9;
             height: 100%;
             width: 100%;
@@ -751,24 +750,81 @@
         .progress-update {
             height: 224px;
             width: 100%;
+            font-family: 'Roboto', sans-serif;
+            letter-spacing: 1.5px;
             display: grid;
-            grid-template-columns:
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+            grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
         }
         #progress-update-1 {
+            color: #ECECEC;
             background-color: steelblue;
         }
+        .progress-date {
+            grid-column: 2/5;
+            grid-row: 2/3;
+            font-size: 1.4em;
+        }
+        .initial-description {
+            grid-column: 2/10;
+            grid-row: 4/6;
+        }
+        .final-description {
+            grid-column: 2/10;
+            grid-row: 7/9;
+        }
         #progress-update-2 {
+            color: #E6E6E6;
             background-color: rgb(104, 167, 202);
         }
         #progress-update-3 {
-            background-color: rgb(141, 189, 216);
+            color: #585858;
+            background-color: skyblue;
         }
         #idea-gen {
-            grid-column: 2/10;
-            grid-row: 11/16;
+            grid-column: 1/11;
+            grid-row: 12/16;
             height: 100%;
             width: 100%;
-            background-color: yellowgreen;
+            background-image: url("http://i.imgur.com/0ktqxSg.png");
+            display: grid;
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        }
+        #author-info {
+            grid-column: 2/10;
+            height: 100%;
+            width: 100%;
+            background-color: rgb(101, 223, 35);
+            display: grid;
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+            grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        }
+        #author-img {
+            grid-column: 4/8;
+            grid-row: 2/5;
+            background-color: goldenrod;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #author-img-ring {
+            height: 350px;
+            width: 350px;
+            background-color: white;
+            border-radius: 50%;
+        }
+        #author-abstract {
+            grid-column: 2/10;
+            grid-row: 6/10;
+            background-color: goldenrod;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+        #author-content {
+            height: 450px;
+            width: 1000px;
+            background-color: white;
         }
         #footer {
             width: 100%;
